--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,18 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+
+        <item name="ms_stepperStyle">@style/DotStepperStyle</item>
+    </style>
+    <style name="DotStepperStyle">
+        <item name="ms_stepperType">dots</item>
+        <item name="ms_activeStepColor">#FFFFFF</item>
+        <item name="ms_inactiveStepColor">#006867</item>
+        <item name="ms_backButtonColor">@color/white</item>
+        <item name="ms_nextButtonColor">@color/white</item>
+        <item name="ms_completeButtonColor">@color/white</item>
+        <item name="ms_bottomNavigationBackground">@color/colorPrimary</item>
     </style>
 
 </resources>
