activities moved to activities package

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:ms_stepperType="dots"
-    tools:context=".SignUpActivity">
+    tools:context=".activities.SignUpActivity">
 
 </com.stepstone.stepper.StepperLayout>
