--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
 
-    tools:context=".Login">
+    tools:context=".activities.Login">
 
 
     <ImageView
