--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -40,11 +39,7 @@
             android:hint="@string/username_login"
             android:inputType="textPersonName"
             android:maxLines="1"
-            android:singleLine="true"
-
-            />
-
-
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -64,11 +59,7 @@
             android:imeOptions="actionUnspecified"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:singleLine="true"
-
-            />
-
-
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
@@ -76,12 +67,10 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:background="#2196F3"
+        android:background="@color/app_color"
         android:shadowRadius="1"
         android:text="@string/login_login_btn"
-        android:textStyle="bold"
-
-        />
+        android:textStyle="bold" />
 
 
     <TextView
@@ -90,16 +79,14 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:text="@string/register_here_login"
-        android:textColor="#000"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="bottom|center"
-
-        >
+        android:gravity="bottom|center">
 
         <TextView
             android:id="@+id/forgot_pass_login"
@@ -108,15 +95,8 @@
             android:layout_marginBottom="8dp"
             android:clickable="true"
             android:text="@string/forgot_password_login"
-            android:textColor="#000"
+            android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold"
-
-
-            />
-
-
+            android:textStyle="bold" />
     </LinearLayout>
-
-
 </LinearLayout>
