--- a/app/src/main/res/layout/sign_up_name_layout.xml
+++ b/app/src/main/res/layout/sign_up_name_layout.xml
@@ -4,19 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_margin="12dp"
-        android:contentDescription="@string/ifmsa_logo_description"
-        android:src="@drawable/main_logo" />
+    <include layout="@layout/logo_ifmsa_layout" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="12dp"
         android:gravity="center"
         android:orientation="vertical">
 
