--- a/app/src/main/res/layout/sing_up_college_layout.xml
+++ b/app/src/main/res/layout/sing_up_college_layout.xml
@@ -4,19 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_margin="20dp"
-        android:contentDescription="@string/ifmsa_logo_description"
-        android:src="@drawable/main_logo" />
+    <include layout="@layout/logo_ifmsa_layout" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +51,7 @@
                 android:id="@+id/spinner_year"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
         </LinearLayout>
 
