--- a/app/src/main/res/layout/sing_up_college_layout.xml
+++ b/app/src/main/res/layout/sing_up_college_layout.xml
@@ -9,13 +9,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_margin="12dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp">
+            android:layout_marginBottom="36dp"
+            android:layout_marginTop="60dp"
+
+
+            >
 
             <TextView
                 android:layout_width="0dp"
@@ -36,7 +40,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp">
+            android:layout_marginTop="16dp"
+
+            >
 
             <TextView
                 android:id="@+id/selectedYear"
