--- a/app/src/main/res/layout/sign_up_username_layout.xml
+++ b/app/src/main/res/layout/sign_up_username_layout.xml
@@ -11,12 +11,15 @@
         android:layout_height="match_parent"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
-        android:gravity="center"
+        android:layout_marginTop="36dp"
         android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            >
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edit_text_username"
@@ -28,7 +31,9 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            >
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edit_text_password"
