--- a/app/src/main/res/layout/sign_up_username_layout.xml
+++ b/app/src/main/res/layout/sign_up_username_layout.xml
@@ -6,12 +6,13 @@
 
     <include layout="@layout/logo_ifmsa_layout" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="12dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="28dp"
         android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
@@ -25,6 +26,7 @@
                 android:id="@+id/edit_text_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
                 android:hint="@string/username_hint"
                 android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
