--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
 
         <item name="ms_stepperStyle">@style/DotStepperStyle</item>
     </style>
+
     <style name="DotStepperStyle">
         <item name="ms_stepperType">dots</item>
         <item name="ms_activeStepColor">#FFFFFF</item>
@@ -18,5 +19,9 @@
         <item name="ms_completeButtonColor">@color/white</item>
         <item name="ms_bottomNavigationBackground">@color/app_color</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
