--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,20 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.ProfileActivity">
+    android:layout_height="match_parent">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
         <ImageView
             android:id="@+id/imageview_fondo_perfil"
             android:layout_width="match_parent"
             android:layout_height="180dp"
-
             android:scaleType="centerCrop"
             android:src="@color/indigo_300" />
 
@@ -29,6 +27,7 @@
             android:layout_below="@id/imageview_fondo_perfil"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="-60dp"
+            android:contentDescription="@string/user_photo_description"
             android:elevation="5dp"
             android:padding="20dp"
             android:scaleType="centerCrop" />
@@ -93,29 +92,27 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:id="@+id/efecto"
-            android:layout_below="@id/relative"
             android:layout_width="match_parent"
-            android:elevation="5dp"
+            android:layout_height="14dp"
+            android:layout_below="@id/relative"
             android:background="@color/indigo_200"
-            android:layout_height="14dp">
-
+            android:elevation="5dp"
+            android:orientation="vertical">
 
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_below="@id/efecto"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/efecto"
+            android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview_proyectos_perfil"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
 
 
             </android.support.v7.widget.RecyclerView>
