--- a/app/src/main/res/layout/reinicio_de_password.xml
+++ b/app/src/main/res/layout/reinicio_de_password.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
-            android:gravity="center||left"
+            android:gravity="center|left"
             android:text="Reinicio de contraseña"
             android:textColor="@color/white"
             android:textSize="@dimen/text_profile"
