--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:id="@+id/main_layout_login"
     android:orientation="vertical"
 
-    tools:context=".activities.Login">
+    tools:context=".activities.LoginActivity">
 
 
     <include layout="@layout/logo_ifmsa_layout" />
@@ -15,9 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="20dp"
-
-        >
+        android:layout_marginTop="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,16 +26,19 @@
                 android:layout_width="24dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="25dp"
-                android:src="@drawable/user_icon" />
+                android:src="@drawable/user_icon"
+                android:layout_marginStart="25dp" />
 
-            <AutoCompleteTextView
+            <EditText
                 android:id="@+id/Username_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="25dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="25dp"
+                android:layout_marginStart="4dp"
                 android:hint="@string/username_login"
-                android:inputType="textPersonName"
+                android:inputType="text"
                 android:maxLines="1"
                 android:singleLine="true" />
         </LinearLayout>
@@ -80,7 +82,7 @@
         android:layout_margin="8dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/borde_de_btn"
-android:elevation="2dp"
+        android:elevation="2dp"
         android:text="@string/login_login_btn"
         android:textColor="@color/indigo_500"
         android:textStyle="bold" />
