--- a/app/src/main/res/layout/sign_up_username_layout.xml
+++ b/app/src/main/res/layout/sign_up_username_layout.xml
@@ -19,8 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            >
+            android:layout_marginBottom="16dp">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edit_text_username"
