--- a/app/src/main/res/layout/sing_up_college_layout.xml
+++ b/app/src/main/res/layout/sing_up_college_layout.xml
@@ -16,10 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="36dp"
-            android:layout_marginTop="60dp"
-
-
-            >
+            android:layout_marginTop="60dp">
 
             <TextView
                 android:layout_width="0dp"
@@ -40,9 +37,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-
-            >
+            android:layout_marginTop="16dp">
 
             <TextView
                 android:id="@+id/selectedYear"
@@ -58,6 +53,25 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/edit_text_phone_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:hint="@string/phone_number_hint"
+                    android:inputType="text" />
+            </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
 
