Se modifico el textView de fecha

--- a/app/src/main/res/layout/cardview_proyectos.xml
+++ b/app/src/main/res/layout/cardview_proyectos.xml
@@ -96,7 +96,7 @@
                     android:layout_gravity="center"
 
                     android:text="00/00/0000"
-                    android:textSize="@dimen/text_profile" />
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <LinearLayout
