Se Agrego Color Blanco de fondo

--- a/app/src/main/res/drawable/borde_de_btn.xml
+++ b/app/src/main/res/drawable/borde_de_btn.xml
@@ -7,5 +7,6 @@
     <stroke
         android:width="3px"
         android:color="@color/indigo_500" />
+    <solid android:color="@color/white"></solid>
 
 </shape>
