Se agrego progressbar

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -114,4 +114,8 @@
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
