--- a/app/src/main/res/layout/crear_proyecto.xml
+++ b/app/src/main/res/layout/crear_proyecto.xml
@@ -30,7 +30,7 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="12dp"
-                android:src="@drawable/arrow_back" />
+                android:src="@drawable/add_photo_icon" />
 
         </LinearLayout>
 
@@ -101,7 +101,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_marginBottom="12dp"
                 android:inputType="text" />
 
@@ -125,12 +125,14 @@
                 android:textStyle="bold" />
 
 
-            <EditText
-                android:id="@+id/EditText_Fecha_CrearProyecto"
-                android:layout_width="125dp"
-                android:layout_height="wrap_content"
-                android:hint="DD/MM/YYYY"
-                android:inputType="date" />
+            <DatePicker
+                android:id="@+id/DatePicker_Date_CrearProyecto"
+                android:layout_width="match_parent"
+                android:layout_marginBottom="12dp"
+                android:layout_height="wrap_content">
+
+
+            </DatePicker>
 
 
             <TextView
@@ -141,25 +143,12 @@
                 android:textSize="@dimen/text_profile"
                 android:textStyle="bold" />
 
-            <LinearLayout
+            <TimePicker
+                android:id="@+id/TimePicker_Time_CrearProyecto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <EditText
-                    android:id="@+id/EditText_Tiempo_CrearProyecto"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:hint="00:00"
-                    android:inputType="time" />
-
-                <Spinner
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center">
-
-                </Spinner>
-            </LinearLayout>
+            </TimePicker>
 
 
         </LinearLayout>
