--- a/app/src/main/res/layout/crear_proyecto.xml
+++ b/app/src/main/res/layout/crear_proyecto.xml
@@ -175,27 +175,18 @@
         </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/lin2"
-            android:layout_marginTop="40dp"
-            android:gravity="center|bottom">
-
-
-            <Button
-                android:id="@+id/button_crear_evento"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/borde_de_btn"
-                android:text="Crear Evento"
-                android:textColor="@color/indigo_500"
-                android:textStyle="bold"
-
-                />
-
-
-        </LinearLayout>
+        <Button
+            android:id="@+id/button_crear_evento"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/lin2"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="32dp"
+            android:background="@drawable/borde_de_btn"
+            android:text="Crear Evento"
+            android:textColor="@color/indigo_500"
+            android:textStyle="bold" />
 
 
     </RelativeLayout>
